@@ -3124,6 +3124,13 @@ config-schema:
             Message names must be given with underscores rather than spaces and with lowercase first
             letter.
             @since 1.32
+    AllowRawHtmlCopyrightMessages:
+        default: true
+        type: boolean
+        description: |-
+            Whether on-wiki overrides for the 'copyright' and 'history_copyright' messages, which allow raw
+            HTML, will be used.
+            @since 1.43
     Localtimezone:
         dynamicDefault:
             callback: [MediaWiki\MainConfigSchema, getDefaultLocaltimezone]
