@@ -173,7 +173,10 @@
 	"view-pool-timeout": "pool overload",
 	"aboutsite": "About {{SITENAME}}",
 	"aboutpage": "Project:About",
-	"copyright": "Content is available under $1 unless otherwise noted.",
+	"copyright": "-",
+	"copyright-footer": "Content is available under $1 unless otherwise noted.",
+	"history_copyright": "-",
+	"copyright-footer-history": "-",
 	"copyrightpage": "{{ns:project}}:Copyrights",
 	"currentevents": "Current events",
 	"currentevents-url": "Project:Current events",
@@ -858,7 +861,6 @@
 	"histlegend": "Diff selection: Mark the radio buttons of the revisions to compare and hit enter or the button at the bottom.<br />\nLegend: <strong>({{int:cur}})</strong> = difference with latest revision, <strong>({{int:last}})</strong> = difference with preceding revision, <strong>{{int:minoreditletter}}</strong> = minor edit.",
 	"history-fieldset-title": "Filter revisions",
 	"history-show-deleted": "Revision deleted only",
-	"history_copyright": "-",
 	"histfirst": "oldest",
 	"histlast": "newest",
 	"historysize": "({{PLURAL:$1|1 byte|$1 bytes}})",
