@@ -436,7 +436,10 @@
 	"view-pool-timeout": "{{notranslate}}\nDebug message indicating that stale content was returned due to a lock timeout",
 	"aboutsite": "Used as the label of the link that appears at the footer of every page on the wiki (in most of the skins) and leads to the page that contains the site description. The link target is {{msg-mw|aboutpage}}.\n\n[[mw:Manual:Interface/Aboutsite|MediaWiki manual]].\n\n{{doc-important|Do not change <nowiki>{{SITENAME}}</nowiki>.}}\n\n{{Identical|About}}",
 	"aboutpage": "{{doc-important|Copy the word \"Project:\" as is to the translation, without translating it. This is the namespace prefix.}}\n\nDo translate \"About\", however.\n\nUsed as the target of the link that appears at the footer of every page on the wiki (in most of the skins) and leads to the page that contains the site description. Therefore, the content should be the same with the page name of the site description page. Only the message in the [[mw:Manual:$wgLanguageCode|site language]] ([[MediaWiki:Aboutpage]]) is used. The link label is {{msg-mw|aboutsite}}.",
-	"copyright": "{{RawHtml|phab=T45646}}\n\nParameters:\n* $1 - license name\n'''See also'''\n* {{msg-mw|Mobile-frontend-copyright}}",
+	"copyright": "{{notranslate}}\nCustomizable copyright footer (raw HTML). Deprecated in favor of {{msg-mw|copyright-footer}}.\n\nParameters:\n* $1 - license name as link or text or HTML. See [[mw:Manual:$wgRightsPage|$wgRightsPage]], [[mw:Manual:$wgRightsUrl|$wgRightsUrl]], [[mw:Manual:$wgRightsText|$wgRightsText]].\n\n'''See also'''\n* {{msg-mw|Mobile-frontend-copyright}}\n* {{msg-mw|history_copyright}}",
+	"copyright-footer": "Customizable copyright footer (wikitext).\n\nParameters:\n* $1 - license name as link or text or HTML. See [[mw:Manual:$wgRightsPage|$wgRightsPage]], [[mw:Manual:$wgRightsUrl|$wgRightsUrl]], [[mw:Manual:$wgRightsText|$wgRightsText]].\n\n'''See also'''\n* {{msg-mw|Mobile-frontend-copyright}}\n* {{msg-mw|copyright-footer-history}}\n* {{msg-mw|copyright}}",
+	"history_copyright": "{{notranslate}}\nCustomizable copyright footer on history pages (raw HTML). Deprecated in favor of {{msg-mw|copyright-footer-history}}. See also {{msg-mw|copyright}}.\n\nParameters:\n* $1 - license name as link or text or HTML. See [[mw:Manual:$wgRightsPage|$wgRightsPage]], [[mw:Manual:$wgRightsUrl|$wgRightsUrl]], [[mw:Manual:$wgRightsText|$wgRightsText]].",
+	"copyright-footer-history": "{{notranslate}}\nCustomizable copyright footer on history pages (wikitext). See also {{msg-mw|copyright-footer}}.\n\nParameters:\n* $1 - license name as link or text or HTML. See [[mw:Manual:$wgRightsPage|$wgRightsPage]], [[mw:Manual:$wgRightsUrl|$wgRightsUrl]], [[mw:Manual:$wgRightsText|$wgRightsText]].",
 	"copyrightpage": "{{doc-important|Do not change <nowiki>{{ns:project}}</nowiki>}}\n\n{{Identical|Copyright}}",
 	"currentevents": "Standard link in the sidebar, for news.\n\nSee also {{msg-mw|Currentevents-url}} for the link URL.\n\nSee also:\n* {{msg-mw|Currentevents}}\n* {{msg-mw|Accesskey-n-currentevents}}\n* {{msg-mw|Tooltip-n-currentevents}}",
 	"currentevents-url": "{{doc-important|Copy the word \"Project:\" as is to the translation, without translating it. This is the namespace prefix.}}\nTarget page of \"CurrentEvents\" in the sidebar.\n\nSee also:\n* {{msg-mw|Currentevents}}",
@@ -1121,7 +1124,6 @@
 	"histlegend": "Text at the top of the history page, explaining how to use it.\n\nOne or two [[:w:en:Radio button|radio buttons]] appear in each row that represents a revision of a wiki page.\n\n\"Legend\" means \"explanation of symbols\".\n\nSee also:\n* {{msg-mw|Cur}}\n* {{msg-mw|Last}}\n* {{msg-mw|Minoreditletter}}\n\nScreenshot:\n[[File:Screenshot of Revision history of Douglas Adams (Q42) - Wikidata.png|thumb|Screenshot of the revision history feature]]",
 	"history-fieldset-title": "Form legend label in the edit history page.",
 	"history-show-deleted": "CheckBox to show only per [[mw:Manual:RevisionDelete|RevisionDelete]] deleted versions.\n\nUsed in History and [[Special:Contributions]].",
-	"history_copyright": "{{notranslate}}",
 	"histfirst": "This is the text of a navigation link displayed as part of the navigation header rendered at top and bottom of pages that are showing a limited part of the Revision history for a specific page as a list of logged messages for changes for that page (with their submitted summary, if applicable), sorted in backward date order, e.g. [{{FULLURL:Support|action=history}} “Support”: Revision history].\n\nIt is followed by the message {{msg-mw|Viewprevnext}}.\n{{Identical|Oldest}}",
 	"histlast": "This is part of the navigation message on the top and bottom of Page History pages which are lists of things in date order, e.g. [{{canonicalurl:Support|action=history}} Page History of Support].\n\nIt is followed by the message {{msg-mw|Viewprevnext}}.\n{{Identical|Newest}}",
 	"historysize": "Parameters:\n* $1 - byte count, for PLURAL support",
